# flappybird

./: CMakeLists.txt  README.md
assets/: bird.png~
src/: Bird.cpp  Bird.hpp  Game.cpp  Game.hpp  Pole.cpp  Pole.hpp  ScrollingBackground.cpp  ScrollingBackground.hpp  config.h  main.cpp
